--- a/PublicArt/Views/ArtTableViewCell.xib
+++ b/PublicArt/Views/ArtTableViewCell.xib
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ArtTableViewCell" rowHeight="120" id="Qdr-zx-Hv1" customClass="ArtTableViewCell" customModule="ArtCity" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ArtTableViewCell" rowHeight="120" id="Qdr-zx-Hv1" customClass="ArtTableViewCell" customModule="PublicArt" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qdr-zx-Hv1" id="DZr-7G-oQN">
+                <rect key="frame" x="0.0" y="0.0" width="287" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="700" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="210" translatesAutoresizingMaskIntoConstraints="NO" id="eaC-tO-4fB">
                         <rect key="frame" x="88" y="16" width="196" height="17"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="250" constant="14" id="ufT-km-Mfy"/>
                         </constraints>
@@ -24,12 +27,14 @@
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noPhotosImage.png" translatesAutoresizingMaskIntoConstraints="NO" id="haL-xT-ufJ" userLabel="image">
                         <rect key="frame" x="5" y="8" width="75" height="100"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" priority="999" constant="75" id="hZh-yc-Evf"/>
                             <constraint firstAttribute="height" priority="999" constant="100" id="lkz-T5-BqQ"/>
                         </constraints>
                     </imageView>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstItem="eaC-tO-4fB" firstAttribute="leading" secondItem="haL-xT-ufJ" secondAttribute="trailing" constant="8" id="E2y-sL-k8v"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="haL-xT-ufJ" secondAttribute="bottom" priority="750" constant="7" id="FkB-kD-a75"/>
@@ -40,6 +45,7 @@
                     <constraint firstItem="eaC-tO-4fB" firstAttribute="top" secondItem="DZr-7G-oQN" secondAttribute="top" constant="16" id="mrO-iD-4f7"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="artView" destination="haL-xT-ufJ" id="SNe-yk-yNU"/>
                 <outlet property="label" destination="eaC-tO-4fB" id="WRE-gE-1Ue"/>
