--- a/PublicArt/Views/MapTableViewCell.xib
+++ b/PublicArt/Views/MapTableViewCell.xib
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MapTableViewCell" rowHeight="44" id="Qdr-zx-Hv1" userLabel="MapTableViewCell" customClass="MapTableViewCell" customModule="ArtCity" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MapTableViewCell" rowHeight="44" id="Qdr-zx-Hv1" userLabel="MapTableViewCell" customClass="MapTableViewCell" customModule="PublicArt" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qdr-zx-Hv1" id="DZr-7G-oQN">
+                <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="700" misplaced="YES" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="210" translatesAutoresizingMaskIntoConstraints="NO" id="eaC-tO-4fB">
                         <rect key="frame" x="8" y="10" width="285" height="15"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="250" constant="20" id="ufT-km-Mfy"/>
                         </constraints>
@@ -23,6 +26,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="eaC-tO-4fB" secondAttribute="trailing" constant="27" id="9Jt-wv-tBG"/>
                     <constraint firstAttribute="bottomMargin" secondItem="eaC-tO-4fB" secondAttribute="bottom" constant="10" id="YiC-be-8dk"/>
@@ -30,6 +34,7 @@
                     <constraint firstItem="eaC-tO-4fB" firstAttribute="leading" secondItem="DZr-7G-oQN" secondAttribute="leadingMargin" id="xzl-VJ-6bE"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="locationName" destination="eaC-tO-4fB" id="Idn-h1-BhC"/>
             </connections>
