--- a/PublicArt/Views/SingleArtPhotosCollectionViewCell.xib
+++ b/PublicArt/Views/SingleArtPhotosCollectionViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -17,11 +18,14 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YDu-tw-vrg">
                                 <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                <animations/>
                             </imageView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Bd6-GC-dK2">
                                 <rect key="frame" x="82" y="82" width="37" height="37"/>
+                                <animations/>
                             </activityIndicatorView>
                         </subviews>
+                        <animations/>
                         <constraints>
                             <constraint firstItem="YDu-tw-vrg" firstAttribute="leading" secondItem="nGu-VZ-K2q" secondAttribute="leading" id="GeM-f8-TV0"/>
                             <constraint firstAttribute="bottom" secondItem="YDu-tw-vrg" secondAttribute="bottom" id="K7g-yH-vUh"/>
@@ -32,8 +36,10 @@
                         </constraints>
                     </view>
                 </subviews>
+                <animations/>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <animations/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="nGu-VZ-K2q" secondAttribute="trailing" id="aaM-mX-wWT"/>
                 <constraint firstItem="nGu-VZ-K2q" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fWb-kL-fQc"/>
