--- a/PublicArt/Welcome/Welcome.storyboard
+++ b/PublicArt/Welcome/Welcome.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="6" translatesAutoresizingMaskIntoConstraints="NO" id="VZM-U7-Ch0">
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="VZM-U7-Ch0">
                                 <rect key="frame" x="250" y="533" width="100" height="37"/>
                                 <animations/>
                                 <constraints>
@@ -28,7 +28,7 @@
                                 <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="currentPageIndicatorTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </pageControl>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9HU-c4-gQe">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9HU-c4-gQe">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -67,7 +67,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PA480" translatesAutoresizingMaskIntoConstraints="NO" id="Tcv-yS-4zQ">
-                                <rect key="frame" x="180" y="160" width="240" height="240"/>
+                                <rect key="frame" x="180" y="180" width="240" height="240"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="EUx-sv-IUb"/>
@@ -78,7 +78,7 @@
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Tcv-yS-4zQ" firstAttribute="centerY" secondItem="4zj-Xk-WBu" secondAttribute="centerY" constant="-20" id="Scd-Gq-6jv"/>
+                            <constraint firstItem="Tcv-yS-4zQ" firstAttribute="centerY" secondItem="4zj-Xk-WBu" secondAttribute="centerY" id="Scd-Gq-6jv"/>
                             <constraint firstItem="Tcv-yS-4zQ" firstAttribute="centerX" secondItem="4zj-Xk-WBu" secondAttribute="centerX" id="mWW-8U-3JK"/>
                         </constraints>
                     </view>
@@ -137,13 +137,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Explore" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yxr-N3-W4w">
-                                <rect key="frame" x="138" y="243" width="324" height="74"/>
+                                <rect key="frame" x="138" y="263" width="324" height="74"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="324" id="UFb-gg-K0P"/>
                                     <constraint firstAttribute="height" constant="74" id="WrJ-Zd-fhr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <color key="textColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -152,7 +152,7 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yxr-N3-W4w" firstAttribute="centerX" secondItem="a7n-6a-Dut" secondAttribute="centerX" id="8wx-Ip-gAF"/>
-                            <constraint firstItem="yxr-N3-W4w" firstAttribute="centerY" secondItem="a7n-6a-Dut" secondAttribute="centerY" constant="-20" id="xrD-2w-yWn"/>
+                            <constraint firstItem="yxr-N3-W4w" firstAttribute="centerY" secondItem="a7n-6a-Dut" secondAttribute="centerY" id="xrD-2w-yWn"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -173,12 +173,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Discover" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ycH-tk-ae6">
-                                <rect key="frame" x="20" y="259" width="560" height="42"/>
+                                <rect key="frame" x="20" y="279" width="560" height="42"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="Vnp-ND-qdE"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="44"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                 <color key="textColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -187,7 +187,7 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ycH-tk-ae6" firstAttribute="leading" secondItem="kPX-Og-71k" secondAttribute="leadingMargin" id="uVR-7V-JYt"/>
-                            <constraint firstItem="ycH-tk-ae6" firstAttribute="centerY" secondItem="kPX-Og-71k" secondAttribute="centerY" constant="-20" id="yXq-dE-vC3"/>
+                            <constraint firstItem="ycH-tk-ae6" firstAttribute="centerY" secondItem="kPX-Og-71k" secondAttribute="centerY" id="yXq-dE-vC3"/>
                             <constraint firstItem="ycH-tk-ae6" firstAttribute="trailing" secondItem="kPX-Og-71k" secondAttribute="trailingMargin" id="ynA-6g-U7Y"/>
                         </constraints>
                     </view>
@@ -208,46 +208,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="YqX-R9-Skk">
-                                <rect key="frame" x="148" y="231" width="322" height="51"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7PZ-LJ-NBF" userLabel="TitleContainer">
+                                <rect key="frame" x="150" y="225" width="300" height="150"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="YqX-R9-Skk">
+                                        <rect key="frame" x="0.0" y="20" width="300" height="51"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="51" id="qd6-eL-9tZ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                        <state key="normal" title="San Francisco">
+                                            <color key="titleColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onContinueButton:" destination="et8-lR-pQe" eventType="touchUpInside" id="qCf-5X-TkG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="otf-yg-pPf">
+                                        <rect key="frame" x="0.0" y="79" width="300" height="51"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="51" id="S1H-Di-p25"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                        <state key="normal" title="Public Art">
+                                            <color key="titleColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onContinueButton:" destination="et8-lR-pQe" eventType="touchUpInside" id="fVp-Tx-aZ0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="322" id="aHB-dQ-Ir9"/>
-                                    <constraint firstAttribute="height" constant="51" id="qd6-eL-9tZ"/>
+                                    <constraint firstAttribute="width" constant="300" id="G3U-AN-Z00"/>
+                                    <constraint firstItem="YqX-R9-Skk" firstAttribute="centerX" secondItem="7PZ-LJ-NBF" secondAttribute="centerX" id="OHN-Pv-mVV"/>
+                                    <constraint firstItem="YqX-R9-Skk" firstAttribute="width" secondItem="7PZ-LJ-NBF" secondAttribute="width" id="VOk-dp-G4m"/>
+                                    <constraint firstAttribute="height" constant="150" id="aMD-yU-LPv"/>
+                                    <constraint firstItem="otf-yg-pPf" firstAttribute="centerX" secondItem="7PZ-LJ-NBF" secondAttribute="centerX" id="g3O-TV-EkF"/>
+                                    <constraint firstItem="otf-yg-pPf" firstAttribute="top" secondItem="YqX-R9-Skk" secondAttribute="bottom" constant="8" id="guM-ZC-OHf"/>
+                                    <constraint firstItem="YqX-R9-Skk" firstAttribute="top" secondItem="7PZ-LJ-NBF" secondAttribute="top" constant="20" id="gxC-vw-c3w"/>
+                                    <constraint firstItem="otf-yg-pPf" firstAttribute="width" secondItem="7PZ-LJ-NBF" secondAttribute="width" id="yZR-4z-fwF"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="44"/>
-                                <state key="normal" title="San Francisco">
-                                    <color key="titleColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onContinueButton:" destination="et8-lR-pQe" eventType="touchUpInside" id="qCf-5X-TkG"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="otf-yg-pPf">
-                                <rect key="frame" x="143" y="290" width="327" height="51"/>
-                                <animations/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="327" id="7sA-Ju-Lga"/>
-                                    <constraint firstAttribute="height" constant="51" id="S1H-Di-p25"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="44"/>
-                                <state key="normal" title="Public Art">
-                                    <color key="titleColor" red="0.95294117649999999" green="0.17254901959999999" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onContinueButton:" destination="et8-lR-pQe" eventType="touchUpInside" id="fVp-Tx-aZ0"/>
-                                </connections>
-                            </button>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="YqX-R9-Skk" secondAttribute="centerX" constant="-9" id="JB4-hU-fby"/>
-                            <constraint firstItem="otf-yg-pPf" firstAttribute="leading" secondItem="YqX-R9-Skk" secondAttribute="leading" constant="-5" id="oQA-sh-Aes"/>
-                            <constraint firstItem="otf-yg-pPf" firstAttribute="top" secondItem="YqX-R9-Skk" secondAttribute="bottom" constant="8" id="tHu-bS-nXt"/>
-                            <constraint firstItem="pld-HS-Q8O" firstAttribute="top" secondItem="YqX-R9-Skk" secondAttribute="bottom" constant="318" id="zCp-9n-D3H"/>
+                            <constraint firstItem="7PZ-LJ-NBF" firstAttribute="centerX" secondItem="4qf-Qo-lZH" secondAttribute="centerX" id="IDG-Xd-dIR"/>
+                            <constraint firstItem="7PZ-LJ-NBF" firstAttribute="centerY" secondItem="4qf-Qo-lZH" secondAttribute="centerY" id="LA4-nK-xjs"/>
                         </constraints>
                     </view>
                 </viewController>
